# rocket_oidc

./: Cargo.toml  README.md
src/: application.rs  guard.rs  lib.rs  routes.rs
