[package]
name = "rocket_oidc"
version = "0.1.0"
authors = ["James Forcier <csssuf@csssuf.net>"]
edition = "2018"

[dependencies]
failure = "0.1.8"
openidconnect = "2.1.2"
oauth2 = {version="4.1.0", features=["reqwest"]}
rocket = {version="0.5.0-rc.1", features = ["secrets", "json"]}
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
url = "2.2.2"
reqwest = "0.11.8"